Add to yml file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ on:
     branches:
       - 'master'
       - 'release-**'
+      - 'supprt_2d_fitting'
   release:
     types: [published]
   schedule:
