Add branch to main.yml so that tests run on github PR.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ on:
     branches:
       - 'master'
       - 'release-**'
+      - 'add_more_spinw_data'
   release:
     types: [published]
   schedule:
