--- a/examples/options_template.ini
+++ b/examples/options_template.ini
@@ -1,17 +1,17 @@
 [FITTING]
 
-software: bumps
-          dfo
-          scipy_ls
-          minuit
-
+software: dfo
+#cost_func_type: nlls
 num_runs: 1
-max_runtime: 600
+max_runtime: 3000 
 
 [MINIMIZERS]
 
-bumps: lm-bumps
-       scipy-leastsq
+bumps: amoeba
+       #lm-bumps
+       #scipy-leastsq
+
+minuit: migrad
 
 dfo: dfols
 
@@ -22,7 +22,7 @@ ralfit: gn
 
 [OUTPUT]
 
-make_plots: no
+make_plots: yes
 
 results_dir: new_results/
 
