Turn into nans values from raw data that cause problems

--- a/examples/options_template.ini
+++ b/examples/options_template.ini
@@ -1,24 +1,31 @@
 [FITTING]
 
-software: dfo
+software: bumps
+          #bumps
+          #scipy
+          #dfo
+
 #cost_func_type: nlls
 num_runs: 1
 max_runtime: 3000 
 
 [MINIMIZERS]
 
-bumps: amoeba
+ralfit: gn 
+        hybrid
+
+lmfit:  leastsq
+        #powell
+        #cobyla
+
+bumps: newton
        #lm-bumps
-       #scipy-leastsq
+       #newton
 
-minuit: migrad
-
+scipy: Powell
+       #COBYLA
+       
 dfo: dfols
-
-scipy_ls: lm-scipy
-
-# Note: this will not run unless ralfit is added to `software` in [FITTING]
-ralfit: gn
 
 [OUTPUT]
 
