Update raw data to newest

--- a/examples/options_template.ini
+++ b/examples/options_template.ini
@@ -18,8 +18,7 @@ lmfit:  leastsq
         #powell
         #cobyla
 
-bumps: newton
-       #lm-bumps
+bumps: lm-bumps
        #newton
 
 scipy: Powell
