Starting guess changes

--- a/examples/options_template.ini
+++ b/examples/options_template.ini
@@ -1,9 +1,13 @@
 [FITTING]
 
-software: bumps
+software: lmfit
+          #bumps
+          #dfo
+          #scipy
           #bumps
           #scipy
           #dfo
+          #ralfit
 
 #cost_func_type: nlls
 num_runs: 1
@@ -15,14 +19,15 @@ ralfit: gn
         hybrid
 
 lmfit:  leastsq
-        #powell
-        #cobyla
+        # powell #needs more time
+        # cobyla
 
-bumps: lm-bumps
+bumps: amoeba
+       lm-bumps
        #newton
 
 scipy: Powell
-       #COBYLA
+       COBYLA
        
 dfo: dfols
 
