fix theseus install

--- a/Container/Containerfile
+++ b/Container/Containerfile
@@ -197,7 +197,7 @@ RUN apt-get install libsuitesparse-dev
 RUN pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
 
 # Install theseus
-RUN pip install theseus-ai
+RUN pip install theseus-ai --no-build-isolation
 
 WORKDIR /
 
