Comment out torch installation

--- a/Container/Containerfile
+++ b/Container/Containerfile
@@ -194,7 +194,7 @@ WORKDIR /
 RUN apt-get install libsuitesparse-dev
 
 # Install pytorch
-RUN pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
+# RUN pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
 
 # Install theseus
 RUN pip install theseus-ai --no-build-isolation
