Comment out theseus installation to check memory issue

--- a/Container/Containerfile
+++ b/Container/Containerfile
@@ -193,13 +193,13 @@ WORKDIR /
 
 RUN apt-get install libsuitesparse-dev
 
-# Install pytorch
-# RUN pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
+# # Install pytorch
+# # RUN pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cpu
 
-# Install theseus
-RUN pip install theseus-ai --no-build-isolation
+# # Install theseus
+# # RUN pip install theseus-ai --no-build-isolation
 
-WORKDIR /
+# WORKDIR /
 
 
 ###########
