set up extra dfo option for noisy objective

--- a/examples/options_template.ini
+++ b/examples/options_template.ini
@@ -1,45 +1,20 @@
 [FITTING]
 
-software: lmfit
-          #bumps
-          #dfo
-          #scipy
-          #bumps
-          #scipy
-          #dfo
-          #ralfit
+software: gradient_free
+          dfo
 
-#cost_func_type: nlls
+
 num_runs: 1
-max_runtime: 3000 
+max_runtime: 6000
 
 [MINIMIZERS]
 
-ralfit: gn 
-        hybrid
-
-lmfit:  leastsq
-        # powell #needs more time
-        # cobyla
-
-bumps: amoeba
-       lm-bumps
-       #newton
-
-scipy: Powell
-       COBYLA
-       
-dfo: dfols
+gradient_free: ParticleSwarmOptimizer
+               EvolutionStrategyOptimizer
+               HillClimbingOptimizer
 
 [OUTPUT]
 
 make_plots: yes
 
-results_dir: new_results/
-
-[LOGGING]
-
-external_output: log_only
-# Note: default for external_output is log_only, meaning information is
-# printed to log file but not the stdout stream. For more information
-# see the fitbenchmarking docs
+results_dir: compare_gradient_free/
