Add option for running leastsq lmfit with step size

--- a/examples/options_template.ini
+++ b/examples/options_template.ini
@@ -1,41 +1,34 @@
 [FITTING]
 
-software: lmfit
-          #bumps
-          #dfo
-          #scipy
-          #bumps
-          #scipy
-          #dfo
-          #ralfit
+software: bumps
+          dfo
+          lmfit
+          minuit
+          scipy
 
-#cost_func_type: nlls
+
 num_runs: 1
 max_runtime: 3000 
 
 [MINIMIZERS]
 
-ralfit: gn 
-        hybrid
-
-lmfit:  leastsq
-        # powell #needs more time
-        # cobyla
-
 bumps: amoeba
        lm-bumps
-       #newton
+
+dfo:    dfols
+
+lmfit:  leastsq
+        leastsq_with_step_size
+
+minuit: simplex
 
 scipy: Powell
-       COBYLA
-       
-dfo: dfols
 
 [OUTPUT]
 
 make_plots: yes
 
-results_dir: new_results/
+results_dir: table1_spinw_report/
 
 [LOGGING]
 
