--- a/Container/Containerfile
+++ b/Container/Containerfile
@@ -3,14 +3,6 @@ FROM ubuntu:24.04
 
 ARG DEBIAN_FRONTEND=noninteractive
 
-
-##############################################################
-# Update cmake -- kitware hosts 3.22 where ubuntu hosts 3.16 #
-# (follows instructions on apt.kitware.com)                  #
-##############################################################
-# RUN curl https://apt.kitware.com/kitware-archive.sh | sh -s -- noble
-
-
 # Install the packages we need to build fitbenchmarking
 # From pkg-config to dbus is needed for SScanSS
 # From gsl-bin to swig for pygsl
@@ -39,7 +31,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends\
     libgsl-dev \
     libgsl-dbg \
     swig \
-    wget \
     gfortran \
     lcov \
     libblas-dev \
@@ -65,7 +56,8 @@ ENV PATH="$VIRTUAL_ENV/bin:$PATH"
 # pip install dependencies in one line.
 # h5py needed for SScanSS
 # torch needed for theseus
-RUN pip install wheel \
+RUN pip install --no-cache-dir \
+    wheel \
     "pytest>3.6" \
     pytest-cov \
     coveralls \
@@ -87,9 +79,9 @@ WORKDIR /
 
 RUN git clone --depth 1 https://github.com/ISISNeutronMuon/SScanSS-2.git
 WORKDIR /SScanSS-2
-RUN pip install .
-RUN rm -rf /SScanSS-2
+RUN pip install --no-cache-dir .
 WORKDIR /
+RUN rm -rf /SScanSS-2
 
 ##################
 # Install RALFit #
@@ -103,7 +95,7 @@ ENV CC=gcc
 RUN cmake /RALFit/libRALFit && make && make install
 
 # make install for RALFit doesn't work in a container, so manually pip install
-RUN pip install .
+RUN pip install --no-cache-dir .
 
 ENV LD_LIBRARY_PATH=/RALFit-build/src:$LD_LIBRARY_PATH
 RUN rm -rf /RALFit/libRALFit/
@@ -149,7 +141,7 @@ RUN ln -s /usr/local/lib/libcutest_single.a objects/pc64.lnx.gfo/single/libcutes
 RUN ln -s /usr/local/lib/libcutest_double.a objects/pc64.lnx.gfo/double/libcutest.a
 
 # install pycutest
-RUN pip install pycutest
+RUN pip install --no-cache-dir pycutest
 
 #################
 # install pygsl #
@@ -157,25 +149,26 @@ RUN pip install pycutest
 
 WORKDIR /
 
-RUN wget -O pygsl.tar.gz https://github.com/pygsl/pygsl/archive/refs/tags/v2.4.0.tar.gz
+RUN curl -LsSf -o pygsl.tar.gz https://github.com/pygsl/pygsl/archive/refs/tags/v2.4.0.tar.gz
 RUN tar --no-same-owner --no-same-permissions -xzf pygsl.tar.gz
 
 WORKDIR /pygsl-2.4.0
-RUN pip install .
+RUN pip install --no-cache-dir .
+WORKDIR /
+RUN rm -rf /pygsl-2.4.0 pygsl.tar.gz
 
 #################
 # Install Ceres #
 #################
-WORKDIR /
 
 # Make ceres directory 
 RUN mkdir -p /ceres
 # Change working directory to ceres  
 WORKDIR /ceres 
 # Download ceres solver 2.0.0 tar 
-RUN wget http://ceres-solver.org/ceres-solver-2.2.0.tar.gz
+RUN curl -LsSf -o ceres.tar.gz http://ceres-solver.org/ceres-solver-2.2.0.tar.gz
 # unpack the tar file 
-RUN tar --no-same-owner --no-same-permissions -xzf ceres-solver-2.2.0.tar.gz
+RUN tar --no-same-owner --no-same-permissions -xzf ceres.tar.gz
 # Make ceres-bin directory
 RUN mkdir -p ceres-bin 
 # Change working directory to ceres-bin
@@ -183,29 +176,27 @@ WORKDIR /ceres/ceres-bin
 RUN cmake -G Ninja ../ceres-solver-2.2.0 -DCMAKE_POLICY_VERSION_MINIMUM=3.5
 RUN cmake --build .
 RUN cmake --install .
-RUN rm -rf ../ceres-solver-2.2.0
+RUN rm -rf ../ceres-solver-2.2.0 ceres.tar.gz
 
 WORKDIR /
 ENV CXX=g++
 RUN git clone --depth 1 https://github.com/cvg/pyceres.git
 WORKDIR /pyceres
-RUN pip install .
-
+RUN pip install --no-cache-dir .
 WORKDIR /
+RUN rm -rf /pyceres
 
 ###########
 # Theseus #
 ###########
 
-WORKDIR /
-
 # Install theseus
-RUN pip install theseus-ai --no-build-isolation
+RUN pip install --no-cache-dir theseus-ai --no-build-isolation
 
 ###########
 # Tidy up #
 ###########
-RUN apt -y autoremove
+RUN apt-get -y autoremove
 
 ## ALL SET UP ##
 WORKDIR /home/
