--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
       group: full_system_linux-${{ github.ref }}
       cancel-in-progress: true
     container:
-      image: 'ghcr.io/fitbenchmarking/fitbenchmarking-extras:latest'
+      image: 'ghcr.io/fitbenchmarking/fitbenchmarking-extras-full-tests:latest'
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
@@ -64,7 +64,6 @@ jobs:
         sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install pybind11[global]
         sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,minuit,SAS,numdifftools,lmfit,nlopt,paramonte,hogben]
         sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade .[dev]
-        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install "numpy<2.0"
         mkdir -p $MASTSIF
         mkdir -p $PYCUTEST_CACHE
     - name: Run tests
@@ -75,6 +74,36 @@ jobs:
       with:
         name: full_system_tests
         path: test-results/full_system_pytest.xml
+
+    mantid_system_linux:
+    name: Mantid System Tests (Linux)
+    if: github.event.repository.fork == false
+    runs-on: ubuntu-latest
+    concurrency:
+      group: full_system_linux-${{ github.ref }}
+      cancel-in-progress: true
+    container:
+      image: 'ghcr.io/fitbenchmarking/fitbenchmarking-extras-mantid-tests:latest'
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Install dependencies
+      run: |
+        conda activate mantid_env
+        python -m pip install pybind11[global]
+        python -m pip install .
+        python -m pip install --upgrade .[dev]
+    - name: Run tests
+      run: ci/ystem_tests-mantid.sh
+    - name: Upload test results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: mantid_system_tests
+        path: test-results/mantid_system_pytest.xml
 
   full_unit_linux:
     name: Full Unit Tests (Linux)
@@ -117,6 +146,44 @@ jobs:
       with:
         name: full_unit_tests
         path: test-results/full_unit_pytest.xml
+
+  mantid_unit_linux:
+    name: Mantid Unit Tests (Linux)
+    if: github.event.repository.fork == false
+    runs-on: ubuntu-latest
+    concurrency:
+      group: full_unit_linux-${{ github.ref }}
+      cancel-in-progress: true
+    container:
+      image: 'ghcr.io/fitbenchmarking/fitbenchmarking-extras-mantid-tests:latest'
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Install dependencies
+      run: |
+        conda activate mantid_env
+        python -m pip install pybind11[global]
+        python -m pip install .
+        python -m pip install --upgrade .[dev]
+    - name: Run tests
+      run: |
+        ci/unit_tests_mantid.sh
+    - name: Submit coverage
+      if: always()
+      uses: coverallsapp/github-action@v2
+      with:
+        file: coverage.lcov
+        compare-sha: ${{ github.event.pull_request.base.sha }}
+        git-commit: ${{ github.event.pull_request.head.sha }}
+    - name: Upload test results
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: full_unit_tests
+        path: test-results/mantid_unit_pytest.xml
 
   default_unit_tests:
     name: Default Unit Tests (Linux)
