more test fixes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -94,7 +94,7 @@ jobs:
       run: |
         conda activate mantid_env
         python -m pip install pybind11[global]
-        python -m pip install .[numdifftools,nlopt]
+        python -m pip install .[bumps,DFO,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
         python -m pip install --upgrade .[dev]
     - name: Run tests
       run: ci/system_tests-mantid.sh
@@ -166,7 +166,7 @@ jobs:
       run: |
         conda activate mantid_env
         python -m pip install pybind11[global]
-        python -m pip install .[numdifftools,nlopt]
+        python -m pip install .[bumps,DFO,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
         python -m pip install --upgrade .[dev]
     - name: Run tests
       run: |
