Revert changes to .ini file

--- a/examples/options_template.ini
+++ b/examples/options_template.ini
@@ -2,33 +2,29 @@
 
 software: bumps
           dfo
-          lmfit
+          scipy_ls
           minuit
-          scipy
-
 
 num_runs: 1
-max_runtime: 3000 
+max_runtime: 600
 
 [MINIMIZERS]
 
-bumps: amoeba
-       lm-bumps
+bumps: lm-bumps
+       scipy-leastsq
 
-dfo:    dfols
+dfo: dfols
 
-lmfit:  leastsq
-        leastsq_step_size
+scipy_ls: lm-scipy
 
-minuit: simplex
-
-scipy: Powell
+# Note: this will not run unless ralfit is added to `software` in [FITTING]
+ralfit: gn
 
 [OUTPUT]
 
-make_plots: yes
+make_plots: no
 
-results_dir: table1_spinw_report/
+results_dir: new_results/
 
 [LOGGING]
 
