--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -129,6 +129,7 @@ jobs:
         sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install pybind11[global]
         sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install .[bumps,DFO,gofit,gradient-free,minuit,SAS,numdifftools,lmfit,nlopt,paramonte,hogben]
         sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install --upgrade .[dev]
+        sudo -HE --preserve-env=PATH $VIRTUAL_ENV/bin/pip install "numpy<2.0"
         mkdir -p $MASTSIF
         mkdir -p $PYCUTEST_CACHE
         sudo apt update
@@ -172,6 +173,8 @@ jobs:
         python -m pip install pybind11[global]
         python -m pip install .[bumps,DFO,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
         python -m pip install --upgrade .[dev]
+        sudo apt update
+        sudo apt install -y curl
     - name: Run tests
       run: |
         . /opt/conda/etc/profile.d/conda.sh
