--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -191,7 +191,7 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: full_unit_tests
+        name: mantid_unit_tests
         path: test-results/mantid_unit_pytest.xml
 
   default_unit_tests:
