--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,12 +92,16 @@ jobs:
       uses: actions/checkout@v4
     - name: Install dependencies
       run: |
+        . /opt/conda/etc/profile.d/conda.sh
         conda activate mantid_env
         python -m pip install pybind11[global]
         python -m pip install .[bumps,DFO,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
         python -m pip install --upgrade .[dev]
     - name: Run tests
-      run: ci/system_tests-mantid.sh
+      run: |
+        . /opt/conda/etc/profile.d/conda.sh
+        conda activate mantid_env
+        ci/system_tests_mantid.sh
     - name: Upload test results
       if: always()
       uses: actions/upload-artifact@v4
@@ -164,12 +168,18 @@ jobs:
       uses: actions/checkout@v4
     - name: Install dependencies
       run: |
+        . /opt/conda/etc/profile.d/conda.sh
         conda activate mantid_env
         python -m pip install pybind11[global]
         python -m pip install .[bumps,DFO,minuit,SAS,numdifftools,lmfit,nlopt,paramonte]
         python -m pip install --upgrade .[dev]
+        sudo apt update
+        sudo apt install -y curl
     - name: Run tests
-      run: ci/unit_tests_mantid.sh
+      run: |
+        . /opt/conda/etc/profile.d/conda.sh
+        conda activate mantid_env
+        ci/unit_tests_mantid.sh
     - name: Submit coverage
       if: always()
       uses: coverallsapp/github-action@v2
@@ -181,7 +191,7 @@ jobs:
       if: always()
       uses: actions/upload-artifact@v4
       with:
-        name: full_unit_tests
+        name: mantid_unit_tests
         path: test-results/mantid_unit_pytest.xml
 
   default_unit_tests:
